fixtures/invalid/bad-code-lang.lmk
@code lang="bad lang"
Language identifiers must be compact.
